# app

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  components.d.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
.impeccable/: design.json
.impeccable/critique/: 2026-06-20T01-09-16Z__dashboard.md  2026-06-20T01-32-53Z__src-pages-accounts-vue.md  2026-06-20T01-45-37Z__src-pages-accountdetail-vue.md  2026-06-20T11-43-44Z__src-pages-transactions-vue.md  2026-06-20T12-04-57Z__contributions.md  2026-06-20T12-18-59Z__src-pages-forecast-vue.md
docs/: fix-b-bulk-write-handoff.md  simplefin-duplicate-review-handoff.md  simplefin-transfer-detection-handoff.md
docs/superpowers/plans/: 2026-06-12-account-and-balance-editing.md  2026-06-12-link-balance-to-transaction.md  2026-06-12-phase-2c-contributions.md  2026-06-12-trackmyfi-phase-1.md  2026-06-12-trackmyfi-phase-2a-transactions.md  2026-06-12-trackmyfi-phase-2b-paychecks.md  2026-06-13-paycheck-form-combobox-and-copy.md  2026-06-13-phase-2d-anti-budget.md  2026-06-13-phase-3-forecasting.md  2026-06-13-turso-sync-smoke-checklist.md  2026-06-13-turso-sync.md  2026-06-14-csv-import-wizard-redesign.md  2026-06-14-currency-percent-inputs.md  2026-06-15-bills-spending-rename.md  2026-06-15-csv-import-categorization.md  2026-06-15-csv-import-transfer-mapping.md  2026-06-16-csv-import-balance-snapshots.md  2026-06-17-csv-import-snapshot-batch-and-feedback.md  2026-06-17-import-mapping-chip-management.md  2026-06-19-accounts-redesign.md
docs/superpowers/specs/: 2026-06-09-trackmyfi-design.md  2026-06-12-account-and-balance-editing-design.md  2026-06-12-link-balance-to-transaction-design.md  2026-06-12-phase-2c-contributions-design.md  2026-06-12-trackmyfi-phase-1-design.md  2026-06-12-trackmyfi-phase-2a-transactions-design.md  2026-06-12-trackmyfi-phase-2b-paychecks-design.md  2026-06-13-encryption-at-rest-design.md  2026-06-13-paycheck-form-combobox-and-copy.md  2026-06-13-phase-2d-anti-budget-design.md  2026-06-13-phase-3-forecasting-design.md  2026-06-13-turso-sync-design.md  2026-06-14-csv-import-wizard-redesign.md  2026-06-14-currency-percent-inputs-design.md  2026-06-15-bills-spending-rename-design.md  2026-06-15-csv-import-categorization-design.md  2026-06-15-save-toast-feedback-design.md  2026-06-16-csv-import-balance-snapshots-design.md  2026-06-17-csv-import-snapshot-batch-and-feedback-design.md  2026-06-17-import-mapping-chip-management-design.md  2026-06-19-accounts-redesign.md  csv-import-transfer-mapping-handoff.md
inertia/: tsconfig.json
inertia/layouts/: default.vue
scripts/: release.mjs  seed-dev-db.sh
src/: App.vue  main.css  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_transactions.sql  0003_paychecks.sql  0004_hsa_coverage.sql  0005_budget.sql  0006_onboarding.sql  0007_date_of_birth.sql  0008_category_rules.sql  0009_asset_events.sql  0010_asset_value.sql  0011_withdrawal.sql  0012_asset_life_expectancy.sql  0013_asset_attachments.sql  0014_storage_config.sql  0015_vendor_rules.sql  0016_simplefin.sql  0017_simplefin_transfers.sql  0018_payment_as_expense.sql  0019_suppress_rules.sql  0020_withdrawal_rate.sql  0021_simplefin_pending.sql  0022_raw_description.sql  0023_traditional_pct.sql  0024_refund.sql  0025_hsa_expenses.sql
src-tauri/src/: db.rs  lib.rs  main.rs  migrations.rs  models.rs  simplefin.rs  storage.rs  sync.rs
src-tauri/src/commands/: accounts.rs  asset_events.rs  budget.rs  category_rules.rs  contributions.rs  data_management.rs  fire_profile.rs  hsa_expenses.rs  import_mappings.rs  mod.rs  paychecks.rs  storage.rs  suppress_rules.rs  transactions.rs  vendor_rules.rs
src-tauri/tests/: contributions.rs  import_mappings.rs  migrations.rs  paychecks.rs  roundtrip.rs  transactions.rs
src/components/: AccountBalanceChart.vue  AccountForm.vue  AccountsNavPanel.vue  AccountsTable.vue  AssetEventDetail.vue  AssetEventForm.vue  BalanceForm.vue  BalanceRow.vue  BridgeCard.vue  BudgetSectionCard.vue  ComboboxInput.vue  CurrencyInput.vue  DateInput.vue  DeleteDataModal.vue  ExpenseMerchantList.vue  ExpenseOpportunities.vue  FiProgressCard.vue  ForecastChart.vue  HsaExpenseDetail.vue  HsaExpenseForm.vue  ImportWizard.vue  InvestmentsChart.vue  MilestoneLadder.vue  MonthPicker.vue  NetWorthChart.vue  PageError.vue  PaycheckForm.vue  PercentInput.vue  SettingsNav.vue  SimpleFinDuplicateReview.vue  StatCard.vue  TransactionChart.vue  TransactionDetail.vue  TransactionForm.vue  TransactionMonthlyBreakdown.vue  UpdateNotifier.vue  ZeroGradientDefs.vue
src/composables/: useCountUp.ts  useMonthEndPaycheckAttribution.ts  usePageData.ts  useReveal.ts  useSyncNotifications.ts  useZeroThresholdGradient.ts
src/lib/: accountTypes.ts  forecastColors.ts
src/lib/accounts/: groups.test.ts  groups.ts
src/lib/api/: accounts.ts  assetEvents.ts  budget.ts  categoryRules.ts  contributions.ts  dataManagement.ts  fireProfile.ts  hsaExpenses.ts  importMappings.ts  paychecks.ts  simplefin.ts  storage.ts  suppressRules.ts  sync.ts  transactions.ts  updater.ts  vendorRules.ts
src/lib/assets/: constants.ts  rollups.test.ts  rollups.ts
src/lib/balances/: change.test.ts  change.ts  milestones.test.ts  milestones.ts  recency.test.ts  recency.ts
src/lib/budget/: index.test.ts  index.ts
src/lib/contributions/: index.test.ts  index.ts  irsLimits.test.ts  irsLimits.ts
src/lib/csv/: balanceProjection.test.ts  balanceProjection.ts  mapping.test.ts  mapping.ts  parse.ts
src/lib/expenses/: merchants.test.ts  merchants.ts  opportunities.test.ts  opportunities.ts  (+4 more)
src/pages/: AccountDetail.vue  Accounts.vue  Assets.vue  Budget.vue  Contributions.vue  Dashboard.vue  Expenses.vue  Forecast.vue  HsaExpenses.vue  Onboarding.vue  Paychecks.vue  Settings.vue  Transactions.vue
src/stores/: accounts.ts  assetEvents.ts  budget.ts  contributions.ts  fireProfile.ts  hsaExpenses.ts  paychecks.ts  simplefin.ts  storage.ts  sync.ts  transactions.ts  updater.ts
(+86 files in other folders)
