[package]
name = "trackmyfi-app"
version = "0.2.16"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trackmyfi_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "10"
libsql = "0.9"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["sync", "time"] }

# Self-updates: check a GitHub Releases manifest, download, and relaunch.
# Desktop-only; the plugins are registered behind `#[cfg(desktop)]` in lib.rs.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"

# On macOS we bypass the keyring crate and call Security.framework directly so
# we can create items with SecAccessCreate(NULL), which lets any app read the
# item without a per-binary ACL prompt. This survives app updates: "Always Allow"
# with the keyring crate's default ACL is tied to the calling binary's code hash,
# which changes on every update when using a self-signed certificate.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework-sys = "2"
core-foundation = "0.10"
core-foundation-sys = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

