[package]
name = "trackmyfi-app"
version = "0.6.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trackmyfi_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "10"
libsql = "0.9"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["sync", "time", "fs"] }
object_store = { version = "0.11", features = ["aws", "gcp"] }
bytes = "1"
uuid = { version = "1", features = ["v4"] }
# SimpleFIN Bridge sync: HTTPS client, setup-token decoding, unix-time → date.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Self-updates: check a GitHub Releases manifest, download, and relaunch.
# Desktop-only; the plugins are registered behind `#[cfg(desktop)]` in lib.rs.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"

# On macOS we bypass the keyring crate and shell out to /usr/bin/security
# (see sync.rs::macos_keychain). Items created in-process are partition-pinned
# to the creating binary's cdhash, which changes on every self-signed update
# and re-triggers the keychain password prompt; items created by Apple's
# security tool carry the stable "apple-tool:" partition instead, so no
# macOS-specific keychain dependency is needed at all.

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

